macros/tests/ui/async.stderr
error: main function cannot be async
 --> tests/ui/async.rs:4:1
  |
4 | async fn kernel_main() -> ! {
  | ^^^^^
