macros/tests/ui/async.rs
use macros::main;

#[main]
async fn kernel_main() -> ! {
    todo!()
}

fn main() {}
